// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component should take a snapshot of Storage Facility 1`] = `
<div>
  <div
    class="create-storage-document css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/orchestration/api/v1/storageNotes/back?n=/create-storage-document/undefined/add-storage-facility-details/"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            You have added 2 storage facilities
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/storageNotes/saveAndValidate?c=/create-storage-document/undefined/you-have-added-a-storage-facility"
        method="POST"
      >
        <h2
          class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
        >
          Facility name
        </h2>
        <dl
          class="css-39qxwj"
        >
          <div
            class="rowWithValidation css-16k4qo5"
            id="storageFacilities-0"
          >
            <dt
              class="css-a1pm7p"
              id="storageFacilities-0-facilityName"
            >
              <span
                class=""
              >
                Facility 1
              </span>
            </dt>
            <span
              class="css-3ay1af"
            >
              <a
                class="css-80kuzi-StyledHoc e109g54z0"
                href="/create-storage-document/undefined/add-storage-facility-details/0"
                id="edit-facility-0"
              >
                Edit
                <span
                  class="govuk-visually-hidden"
                >
                  storage facility Facility 1
                </span>
              </a>
            </span>
            <span
              class="css-3ay1af"
            >
              <button
                class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
                formaction="/orchestration/api/v1/storageNotes/removeKey?n=/create-storage-document/undefined/add-storage-facility-details&key=storageFacilities.0"
                id="remove-facility-0"
              >
                Remove
                <span
                  class="govuk-visually-hidden"
                >
                  storage facility Facility 1
                </span>
              </button>
            </span>
          </div>
        </dl>
        <dl
          class="css-39qxwj"
        >
          <div
            class="rowWithValidation css-16k4qo5"
            id="storageFacilities-1"
          >
            <dt
              class="css-a1pm7p"
              id="storageFacilities-1-facilityName"
            >
              <span
                class=""
              >
                Facility 2
              </span>
            </dt>
            <span
              class="css-3ay1af"
            >
              <a
                class="css-80kuzi-StyledHoc e109g54z0"
                href="/create-storage-document/undefined/add-storage-facility-details/1"
                id="edit-facility-1"
              >
                Edit
                <span
                  class="govuk-visually-hidden"
                >
                  storage facility Facility 2
                </span>
              </a>
            </span>
            <span
              class="css-3ay1af"
            >
              <button
                class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
                formaction="/orchestration/api/v1/storageNotes/removeKey?n=/create-storage-document/undefined/add-storage-facility-details&key=storageFacilities.1"
                id="remove-facility-1"
              >
                Remove
                <span
                  class="govuk-visually-hidden"
                >
                  storage facility Facility 2
                </span>
              </button>
            </span>
          </div>
        </dl>
        <br />
        <br />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <h2
              class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            >
              Do you need to add another storage facility?
            </h2>
            <div
              class="e1vcssft0 css-1phgi8s-StyledFieldset-StyledHoc e4u1u2g0"
              id="addAnotherStorageFacility"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              />
              <fieldset>
                <legend
                  class="visually-hidden"
                >
                  Do you need to add another storage facility?
                </legend>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherStorageFacilityYes"
                  id="label-addAnotherStorageFacilityYes"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherStorageFacilityYes"
                    name="addAnotherStorageFacility"
                    type="radio"
                    value="Yes"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    Yes
                  </span>
                </label>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherStorageFacilityNo"
                  id="label-addAnotherStorageFacilityNo"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherStorageFacilityNo"
                    name="addAnotherStorageFacility"
                    type="radio"
                    value="No"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    No
                  </span>
                </label>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/storageNotes/saveAndValidate?saveAsDraftUrl=undefined&c=/create-storage-document/undefined/you-have-added-a-storage-facility"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <input
            name="journey"
            type="hidden"
            value="storageNotes"
          />
          <input
            name="currentUri"
            type="hidden"
            value=""
          />
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/create-storage-document/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should take snapshot of the page based on number of facilities added should take a snapshot of Storage Facility when no storage facilities added 1`] = `
<div>
  <div
    class="create-storage-document css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/orchestration/api/v1/storageNotes/back?n=/create-storage-document/undefined/add-products-to-this-export"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            You have added 0 storage facility
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/storageNotes/saveAndValidate?c=/create-storage-document/undefined/you-have-added-a-storage-facility"
        method="POST"
      >
        <h2
          class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
        >
          Facility name
        </h2>
        <br />
        <br />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <h2
              class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            >
              Do you need to add another storage facility?
            </h2>
            <div
              class="e1vcssft0 css-1phgi8s-StyledFieldset-StyledHoc e4u1u2g0"
              id="addAnotherStorageFacility"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              />
              <fieldset>
                <legend
                  class="visually-hidden"
                >
                  Do you need to add another storage facility?
                </legend>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherStorageFacilityYes"
                  id="label-addAnotherStorageFacilityYes"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherStorageFacilityYes"
                    name="addAnotherStorageFacility"
                    type="radio"
                    value="Yes"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    Yes
                  </span>
                </label>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherStorageFacilityNo"
                  id="label-addAnotherStorageFacilityNo"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherStorageFacilityNo"
                    name="addAnotherStorageFacility"
                    type="radio"
                    value="No"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    No
                  </span>
                </label>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/storageNotes/saveAndValidate?saveAsDraftUrl=undefined&c=/create-storage-document/undefined/you-have-added-a-storage-facility"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <input
            name="journey"
            type="hidden"
            value="storageNotes"
          />
          <input
            name="currentUri"
            type="hidden"
            value=""
          />
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/create-storage-document/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should take snapshot of the page based on number of facilities added should take a snapshot of Storage Facility when only 1 facility added 1`] = `
<div>
  <div
    class="create-storage-document css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <a
            class="e1vcssft0 css-zk98nb-Anchor-StyledHoc e4u1u2g0"
            href="/orchestration/api/v1/storageNotes/back?n=/create-storage-document/undefined/add-storage-facility-details/"
          >
            Back
          </a>
          <h1
            class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
          >
            You have added 1 storage facility
          </h1>
        </div>
      </div>
      <form
        action="/orchestration/api/v1/storageNotes/saveAndValidate?c=/create-storage-document/undefined/you-have-added-a-storage-facility"
        method="POST"
      >
        <h2
          class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
        >
          Facility name
        </h2>
        <dl
          class="css-39qxwj"
        >
          <div
            class="rowWithValidation css-16k4qo5"
            id="storageFacilities-0"
          >
            <dt
              class="css-a1pm7p"
              id="storageFacilities-0-facilityName"
            >
              <span
                class=""
              >
                Facility 1
              </span>
            </dt>
            <span
              class="css-3ay1af"
            >
              <a
                class="css-80kuzi-StyledHoc e109g54z0"
                href="/create-storage-document/undefined/add-storage-facility-details/0"
                id="edit-facility-0"
              >
                Edit
                <span
                  class="govuk-visually-hidden"
                >
                  storage facility Facility 1
                </span>
              </a>
            </span>
            <span
              class="css-3ay1af"
            />
          </div>
        </dl>
        <br />
        <br />
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <div
            class="css-1w80l5h-StyledColumn e4u1u2g0"
          >
            <h2
              class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
            >
              Do you need to add another storage facility?
            </h2>
            <div
              class="e1vcssft0 css-1phgi8s-StyledFieldset-StyledHoc e4u1u2g0"
              id="addAnotherStorageFacility"
            >
              <span
                class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
              />
              <fieldset>
                <legend
                  class="visually-hidden"
                >
                  Do you need to add another storage facility?
                </legend>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherStorageFacilityYes"
                  id="label-addAnotherStorageFacilityYes"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherStorageFacilityYes"
                    name="addAnotherStorageFacility"
                    type="radio"
                    value="Yes"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    Yes
                  </span>
                </label>
                <label
                  class="css-y8ql23-StyledHoc"
                  for="addAnotherStorageFacilityNo"
                  id="label-addAnotherStorageFacilityNo"
                >
                  <input
                    class="css-1xt3i3l"
                    id="addAnotherStorageFacilityNo"
                    name="addAnotherStorageFacility"
                    type="radio"
                    value="No"
                  />
                  <span
                    class="css-1uwxoxa"
                  >
                    No
                  </span>
                </label>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="css-1lzr9ic-StyledRow e4u1u2g0"
        >
          <button
            class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
            formaction="/orchestration/api/v1/storageNotes/saveAndValidate?saveAsDraftUrl=undefined&c=/create-storage-document/undefined/you-have-added-a-storage-facility"
            id="saveAsDraft"
            name="saveAsDraft"
            type="submit"
          >
            Save as Draft
          </button>
          <input
            name="journey"
            type="hidden"
            value="storageNotes"
          />
          <input
            name="currentUri"
            type="hidden"
            value=""
          />
          <button
            class="css-1gc9650-StyledButton-StyledHoc e4u1u2g0"
            id="continue"
            type="submit"
          >
            Save and continue
          </button>
        </div>
      </form>
      <a
        href="/create-storage-document/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
